--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
   </div>
 
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
+  <script src="https://cdn.plot.ly/plotly-3.0.1.min.js"></script>
   <script src="./static/js/app.js"></script>
 
 </body>
