--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
           <div class="card-header">
             <h4 class="card-title">Demographic Info</h4>
           </div>
-          <div id="sample-metadata" class="card-body"></div>
+          <div id="sample-metadata" class="card-body">
+          </div>
         </div>
       </div>
       <div class="col-md-9">
